fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif; */
   font-family: 'Clash Grotesk Variable', sans-serif;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* background-color: #000; */
 }
 
